--- a/book.bib
+++ b/book.bib
@@ -241,3 +241,10 @@
   year={1988},
   publisher={Academic press}
 }
+
+@book{margulis2005photoshop,
+  title={Photoshop LAB color: The canyon conundrum and other adventures in the most powerful colorspace},
+  author={Margulis, Dan},
+  year={2005},
+  publisher={Peachpit Press}
+}
