--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -203,7 +203,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-07-26}
+\date{2020-07-28}
 
 \begin{document}
 \maketitle
@@ -264,16 +264,85 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ## Locale: en_CA.UTF-8 / en_CA.UTF-8 / en_CA.UTF-8 / C / en_CA.UTF-8 / en_CA.UTF-8
 ## 
 ## Package version:
-##   base64enc_0.1.3 bookdown_0.19.1 compiler_4.0.2 
-##   digest_0.6.25   evaluate_0.14   glue_1.4.1     
-##   graphics_4.0.2  grDevices_4.0.2 highr_0.8      
-##   htmltools_0.4.0 jsonlite_1.6.1  knitr_1.28     
-##   magrittr_1.5    markdown_1.1    methods_4.0.2  
-##   mime_0.9        packrat_0.5.0   Rcpp_1.0.5     
-##   rlang_0.4.7     rmarkdown_2.2   rstudioapi_0.11
-##   stats_4.0.2     stringi_1.4.6   stringr_1.4.0  
-##   tinytex_0.23    tools_4.0.2     utils_4.0.2    
-##   xfun_0.14       yaml_2.2.1
+##   abind_1.4.5              acepack_1.4.1           
+##   arm_1.11.1               askpass_1.1             
+##   assertthat_0.2.1         backports_1.1.8         
+##   base64enc_0.1-3          BH_1.72.0.3             
+##   bitops_1.0-6             bookdown_0.19.1         
+##   boot_1.3.25              broom_0.7.0.9000        
+##   callr_3.4.3              cellranger_1.1.0        
+##   checkmate_2.0.0          cli_2.0.2               
+##   clipr_0.7.0              cluster_2.1.0           
+##   coda_0.19.3              colorspace_1.4-1        
+##   compiler_4.0.2           crayon_1.3.4            
+##   curl_4.3                 data.table_1.12.8       
+##   DBI_1.1.0                dbplyr_1.4.3            
+##   desc_1.2.0               digest_0.6.25           
+##   dplyr_1.0.0              ellipsis_0.3.1          
+##   emoGG_0.0.2              evaluate_0.14           
+##   fansi_0.4.1              farver_2.0.3            
+##   forcats_0.5.0            foreign_0.8-80          
+##   Formula_1.2-3            fs_1.4.1                
+##   generics_0.0.2           ggplot2_3.3.2           
+##   glue_1.4.1               graphics_4.0.2          
+##   grDevices_4.0.2          grid_4.0.2              
+##   gridExtra_2.3            gsl_2.1.6               
+##   gtable_0.3.0             haven_2.3.1             
+##   highr_0.8                Hmisc_4.4-0             
+##   hms_0.5.3                htmlTable_2.0.0         
+##   htmltools_0.4.0          htmlwidgets_1.5.1       
+##   httr_1.4.1               isoband_0.2.2           
+##   janitor_2.0.1            jpeg_0.1-8.1            
+##   jsonlite_1.6.1           knitr_1.28              
+##   labeling_0.3             lattice_0.20-41         
+##   latticeExtra_0.6-29      lavaan_0.6.6            
+##   learnSampling_0.2        lifecycle_0.2.0         
+##   lme4_1.1.23              lubridate_1.7.8         
+##   magrittr_1.5             markdown_1.1            
+##   MASS_7.3.51.6            Matrix_1.2-18           
+##   matrixcalc_1.0.3         MBESS_4.7.0             
+##   methods_4.0.2            mgcv_1.8.31             
+##   mi_1.0                   mime_0.9                
+##   minqa_1.2.4              mnormt_2.0.1            
+##   modelr_0.1.8             munsell_0.5.0           
+##   mvtnorm_1.1.1            nlme_3.1-148            
+##   nloptr_1.2.2.2           nnet_7.3-14             
+##   numDeriv_2016.8.1.1      OpenMx_2.17.4           
+##   openssl_1.4.1            packrat_0.5.0           
+##   parallel_4.0.2           pbapply_1.4.2           
+##   pbivnorm_0.6.0           pillar_1.4.6            
+##   pkgbuild_1.1.0           pkgconfig_2.0.3         
+##   pkgload_1.1.0            png_0.1-7               
+##   praise_1.0.0             predictionInterval_1.0.0
+##   prettyunits_1.1.1        processx_3.4.3          
+##   progress_1.2.2           proto_1.0.0             
+##   ps_1.3.3                 psych_1.9.12.31         
+##   purrr_0.3.4              R6_2.4.1                
+##   RColorBrewer_1.1-2       Rcpp_1.0.5              
+##   RcppEigen_0.3.3.7.0      RcppParallel_5.0.2      
+##   RCurl_1.98-1.2           readr_1.3.1             
+##   readxl_1.3.1             rematch_1.0.1           
+##   repr_1.1.0               reprex_0.3.0            
+##   rlang_0.4.7              rmarkdown_2.2           
+##   rpart_4.1-15             rpf_1.0.4               
+##   rprojroot_1.3.2          rstudioapi_0.11         
+##   rvest_0.3.5              scales_1.1.1            
+##   selectr_0.4.2            sem_3.1.11              
+##   semTools_0.5.3           skimr_2.1.1             
+##   snakecase_0.11.0         splines_4.0.2           
+##   StanHeaders_2.21.0.5     statmod_1.4.34          
+##   stats_4.0.2              stats4_4.0.2            
+##   stringi_1.4.6            stringr_1.4.0           
+##   survival_3.1-12          sys_3.3                 
+##   testthat_2.3.2           tibble_3.0.3            
+##   tidyr_1.1.0              tidyselect_1.1.0        
+##   tidyverse_1.3.0          tinytex_0.23            
+##   tmvnsim_1.0-2            tools_4.0.2             
+##   utf8_1.1.4               utils_4.0.2             
+##   vctrs_0.3.2              viridis_0.5.1           
+##   viridisLite_0.3.0        whisker_0.4             
+##   withr_2.2.0              xfun_0.14               
+##   xml2_1.3.2               yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -517,23 +586,6 @@ The tidyverse is now installed, so we need to activate it. We do that with the l
 \subsection{Activate tidyverse auto-complete for your script}\label{activate-tidyverse-auto-complete-for-your-script}}
 
 Select the library(tidyverse) text with your mouse/track-pad so that it is highlighted. Then click the Run button in the upper right of the Script panel. Doing this ``runs'' the selected text. After you click the Run button you should see text like the following the Console panel:
-
-\begin{verbatim}
-## -- Attaching packages ------------------- tidyverse 1.3.0 --
-\end{verbatim}
-
-\begin{verbatim}
-## v ggplot2 3.3.2     v purrr   0.3.4
-## v tibble  3.0.3     v dplyr   1.0.0
-## v tidyr   1.1.0     v stringr 1.4.0
-## v readr   1.3.1     v forcats 0.5.0
-\end{verbatim}
-
-\begin{verbatim}
-## -- Conflicts ---------------------- tidyverse_conflicts() --
-## x dplyr::filter() masks stats::filter()
-## x dplyr::lag()    masks stats::lag()
-\end{verbatim}
 
 When you use library(tidyverse) to activate the tidyverse you activate the most commonly used subset of the tidyverse packages. In the output you see checkmarks beside names of the tidyverse packages you have activated.
 
@@ -5357,7 +5409,7 @@ Likewise, the population-level standardized mean difference (\(\delta\)) is 1.49
 \]
 
 \begin{figure}
-\includegraphics[width=0.95\linewidth]{ch_samples/images/sex_pops} \caption[Illustration of standardized mean difference of $\delta =1.49$]{Illustration of the standardized mean difference of 1.49 for height between males and females. The solid black vertical lines indicates the means ($\mu$) for the two populations.}\label{fig:sexpop}
+\includegraphics[width=0.95\linewidth]{ch_samples/images/sex_pops} \caption[Illustration of standardized mean difference of $\delta =1.49$]{Illustration of the standardized mean difference of 1.49 for male and female heights. The solid black vertical line indicates the mean for males whereas the dotted vertical line indicates the mean for females.}\label{fig:sexpop}
 \end{figure}
 
 We typically need to estimate the population-level standardized mean difference from sample data because we rarely have access to data for an entire population. Many researchers estimate the population standardized mean difference from sample data using the Formula \eqref{eq:samplesmdch5} below. This value is known by many other names: \(d\), Cohen's \(d\), and Hedges \(g\). Notice that the sample-level formula, Formula \eqref{eq:samplesmdch5}, below, is the same as the population-level formula, Formula \eqref{eq:popsmdch5}, above, only the notation differs.
@@ -5706,6 +5758,7 @@ Required CRAN Packages\tabularnewline
 \midrule
 \endhead
 tidyverse\tabularnewline
+RColorBrewer\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -6523,6 +6576,191 @@ If you scroll down to section 5 Uncategorized on this page you will find the cod
 \end{Shaded}
 
 \includegraphics[width=0.85\linewidth]{ch_graphing/images/emoji_graph}
+
+\hypertarget{accessible-colors}{%
+\section{Accessible Colors}\label{accessible-colors}}
+
+The current version of the graph is much improved from where we started at the begining of the chapter. In many respects using the ``proper'' colors for the Marvel and DC studios is aesthetically pleasing. That said, a major consideration for all the graphs you make should be making them accessible and interpretable by a wide audience.
+
+Color blindness is an issue that affects approximately five percent of the population. A nuanced discussion of the different types of color blindness is beyond the scope of the current discussion. We can, however, take a momement to think about every graph as being composed of two parts that work together to create the overall image. We can can there of there being a lightness (i.e., light vs.~dark) component and a color component. Together these two components work together to create the image that we see. This distinction between lightness and color is relevant to all images \citep[see][]{margulis2005photoshop}.
+
+\begin{figure}
+\includegraphics[width=0.85\linewidth]{ch_graphing/images/nocolorcomparison} \caption{Color information removed from current graph}\label{fig:colorcomparison}
+\end{figure}
+
+Figure \ref{fig:colorcomparison}A presents our current graph whereas Figure \ref{fig:colorcomparison}B presents the same graph with the color component removed. You can see that when the color component is removed that the distinction between the Marvel and DC bars is also removed. The particular colors used to represent Marvel/DC differ in terms of color but not lightness. Consequently, when we remove the color component we are left with a graph, \ref{fig:colorcomparison}B, that does not differentiate between the two studios. In order for a color graph to be accessible to people with color blindness we need to pick colors that vary in terms of lightness. We can do that with the help of the RColorBrewer package.
+
+\hypertarget{rcolorbrewer}{%
+\subsection{RColorBrewer}\label{rcolorbrewer}}
+
+\hypertarget{picking-a-palette}{%
+\subsubsection{Picking a palette}\label{picking-a-palette}}
+
+The RColorBrewer package can be used to generate color palettes for graphs that are accessible to people with color blindness. You can see the color-blind friendly palettes, along with their respective names, by using the command below. This presents a wide range of color blind safe palettes with a large number of colors - as illustrated in Figure \ref{fig:colorpal}.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(RColorBrewer)}
+\KeywordTok{display.brewer.all}\NormalTok{(}\DataTypeTok{n =} \OtherTok{NULL}\NormalTok{, }\DataTypeTok{colorblindFriendly =} \OtherTok{TRUE}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{figure}
+\includegraphics[width=0.7\linewidth,height=0.7\textheight]{ch_graphing/images/colors_all} \caption{Wide range color palette (color-blind safe)}\label{fig:colorpal}
+\end{figure}
+
+\newpage
+
+In Figure \ref{fig:colorpal}, above, we showed palettes with a large number of colors. But if you have a smaller number of possible colors in your graph - you want a smaller palette (to ensure maximium contrast between colors). For example, if you only want see palettes with three colors you use the code below which generate Figure \ref{fig:colorspalthree}.
+
+\begin{figure}
+\includegraphics[width=0.7\linewidth,height=0.7\textheight]{ch_graphing/images/colors_3} \caption{Narrow range color palette (color-blind safe)}\label{fig:colorspalthree}
+\end{figure}
+
+\newpage
+
+\hypertarget{using-a-palette}{%
+\subsubsection{Using a palette}\label{using-a-palette}}
+
+We can use the color palette by specifying it's name within scale\_fill\_brewer(). We want to use the Paired palette in Figure \ref{fig:colorspalthree} so we use the code: scale\_fill\_brewer(palette = ``Paired''), as illustrated below:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{my_graph <-}\StringTok{ }\KeywordTok{ggplot}\NormalTok{(}\DataTypeTok{data =}\NormalTok{ movie_data,}
+           \DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{x =}\NormalTok{ title,}
+                         \DataTypeTok{y =}\NormalTok{ boxoffice,}
+                         \DataTypeTok{label =}\NormalTok{ boxoffice, }
+                         \DataTypeTok{fill =}\NormalTok{ studio)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_col}\NormalTok{() }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_text}\NormalTok{(}\DataTypeTok{nudge_y =} \DecValTok{150}\NormalTok{)  }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_text}\NormalTok{(}\DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{label =}\NormalTok{ tomatoes_aud), }
+            \DataTypeTok{nudge_y =} \DecValTok{600}\NormalTok{, }
+            \DataTypeTok{colour =} \StringTok{"red"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_emoji}\NormalTok{(}\DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{y =}\NormalTok{ boxoffice }\OperatorTok{+}\StringTok{ }\DecValTok{400}\NormalTok{),}
+             \DataTypeTok{emoji=}\StringTok{"1f345"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{axis.text.x =} \KeywordTok{element_text}\NormalTok{(}\DataTypeTok{angle =} \DecValTok{60}\NormalTok{, }
+                                   \DataTypeTok{hjust =} \DecValTok{1}\NormalTok{)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{scale_fill_brewer}\NormalTok{(}\DataTypeTok{palette =} \StringTok{"Paired"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics[width=0.85\linewidth]{ch_graphing/images/emoji_graph4}
+
+\hypertarget{palette-subsets}{%
+\subsubsection{Palette subsets}\label{palette-subsets}}
+
+Imagine
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{brewer.pal}\NormalTok{(}\DataTypeTok{n =} \DecValTok{3}\NormalTok{, }\DataTypeTok{name =} \StringTok{"Paired"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] "#A6CEE3" "#1F78B4" "#B2DF8A"
+\end{verbatim}
+
+And then the graph:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{my_graph <-}\StringTok{ }\KeywordTok{ggplot}\NormalTok{(}\DataTypeTok{data =}\NormalTok{ movie_data,}
+           \DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{x =}\NormalTok{ title,}
+                         \DataTypeTok{y =}\NormalTok{ boxoffice,}
+                         \DataTypeTok{label =}\NormalTok{ boxoffice, }
+                         \DataTypeTok{fill =}\NormalTok{ studio)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_col}\NormalTok{() }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_text}\NormalTok{(}\DataTypeTok{nudge_y =} \DecValTok{150}\NormalTok{)  }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_text}\NormalTok{(}\DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{label =}\NormalTok{ tomatoes_aud), }
+            \DataTypeTok{nudge_y =} \DecValTok{600}\NormalTok{, }
+            \DataTypeTok{colour =} \StringTok{"red"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_emoji}\NormalTok{(}\DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{y =}\NormalTok{ boxoffice }\OperatorTok{+}\StringTok{ }\DecValTok{400}\NormalTok{),}
+             \DataTypeTok{emoji=}\StringTok{"1f345"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{axis.text.x =} \KeywordTok{element_text}\NormalTok{(}\DataTypeTok{angle =} \DecValTok{60}\NormalTok{, }
+                                   \DataTypeTok{hjust =} \DecValTok{1}\NormalTok{)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{scale_fill_manual}\NormalTok{(}\DataTypeTok{values =} \KeywordTok{c}\NormalTok{(}\StringTok{"#1F78B4"}\NormalTok{, }\StringTok{"#B2DF8A"}\NormalTok{))}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics[width=0.85\linewidth]{ch_graphing/images/emoji_graph5}
+
+We once again compare:
+
+\begin{figure}
+\includegraphics[width=0.85\linewidth]{ch_graphing/images/nocolorcomparison2} \caption{Color information removed from new color-safe graph}\label{fig:colorcomparison2}
+\end{figure}
+
+\hypertarget{avoid-color}{%
+\subsection{Avoid color}\label{avoid-color}}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{my_graph <-}\StringTok{ }\KeywordTok{ggplot}\NormalTok{(}\DataTypeTok{data =}\NormalTok{ movie_data,}
+           \DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{x =}\NormalTok{ title,}
+                         \DataTypeTok{y =}\NormalTok{ boxoffice,}
+                         \DataTypeTok{label =}\NormalTok{ boxoffice, }
+                         \DataTypeTok{fill =}\NormalTok{ studio)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_col}\NormalTok{() }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_text}\NormalTok{(}\DataTypeTok{nudge_y =} \DecValTok{150}\NormalTok{)  }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_text}\NormalTok{(}\DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{label =}\NormalTok{ tomatoes_aud), }
+            \DataTypeTok{nudge_y =} \DecValTok{600}\NormalTok{, }
+            \DataTypeTok{colour =} \StringTok{"red"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_emoji}\NormalTok{(}\DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{y =}\NormalTok{ boxoffice }\OperatorTok{+}\StringTok{ }\DecValTok{400}\NormalTok{),}
+             \DataTypeTok{emoji=}\StringTok{"1f345"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{axis.text.x =} \KeywordTok{element_text}\NormalTok{(}\DataTypeTok{angle =} \DecValTok{60}\NormalTok{, }
+                                   \DataTypeTok{hjust =} \DecValTok{1}\NormalTok{)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{scale_fill_manual}\NormalTok{(}\DataTypeTok{values =} \KeywordTok{c}\NormalTok{(}\StringTok{"#ffffff"}\NormalTok{, }\StringTok{"#000000"}\NormalTok{))}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics[width=0.85\linewidth]{ch_graphing/images/emoji_graph2}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{my_graph <-}\StringTok{ }\KeywordTok{ggplot}\NormalTok{(}\DataTypeTok{data =}\NormalTok{ movie_data,}
+           \DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{x =}\NormalTok{ title,}
+                         \DataTypeTok{y =}\NormalTok{ boxoffice,}
+                         \DataTypeTok{label =}\NormalTok{ boxoffice, }
+                         \DataTypeTok{fill =}\NormalTok{ studio)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_col}\NormalTok{(}\DataTypeTok{color =} \StringTok{"black"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_text}\NormalTok{(}\DataTypeTok{nudge_y =} \DecValTok{150}\NormalTok{)  }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_text}\NormalTok{(}\DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{label =}\NormalTok{ tomatoes_aud), }
+            \DataTypeTok{nudge_y =} \DecValTok{600}\NormalTok{, }
+            \DataTypeTok{colour =} \StringTok{"red"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_emoji}\NormalTok{(}\DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{y =}\NormalTok{ boxoffice }\OperatorTok{+}\StringTok{ }\DecValTok{400}\NormalTok{),}
+             \DataTypeTok{emoji=}\StringTok{"1f345"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{axis.text.x =} \KeywordTok{element_text}\NormalTok{(}\DataTypeTok{angle =} \DecValTok{60}\NormalTok{, }
+                                   \DataTypeTok{hjust =} \DecValTok{1}\NormalTok{)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{scale_fill_manual}\NormalTok{(}\DataTypeTok{values =} \KeywordTok{c}\NormalTok{(}\StringTok{"#ffffff"}\NormalTok{, }\StringTok{"#000000"}\NormalTok{))}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics[width=0.85\linewidth]{ch_graphing/images/emoji_graph3}
 
 \hypertarget{saving}{%
 \section{Saving}\label{saving}}
