--- a/packages.bib
+++ b/packages.bib
@@ -67,6 +67,13 @@
   note = {R package version 0.3.4},
   url = {https://CRAN.R-project.org/package=purrr},
 }
+@Manual{R-RColorBrewer,
+  title = {RColorBrewer: ColorBrewer Palettes},
+  author = {Erich Neuwirth},
+  year = {2014},
+  note = {R package version 1.1-2},
+  url = {https://CRAN.R-project.org/package=RColorBrewer},
+}
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Romain Francois},
