--- a/06-graphing.Rmd
+++ b/06-graphing.Rmd
@@ -879,7 +879,7 @@ knitr::include_graphics("ch_graphing/images/emoji_graph5.png")
 ```
 
 
-Now that we have used a color-blind paccessible alette we can look at the graph without the color component. We see in Figure \@ref(fig:colorcomparison2)B, below, that when we examine bars based on lightness alone (with hue removed) we have contrast. The new color-blind accessible colors vary in term of hue and lightness - not just hue. Therefore, when the hue is removed the two colors are distinguishable color-blind individuals.
+Now that we have used a color-blind accessible palette we can look at the graph without the color component. We see in Figure \@ref(fig:colorcomparison2)B, below, that when we examine bars based on lightness alone (with hue removed) we have contrast. The new color-blind accessible colors vary in term of hue and lightness - not just hue. Therefore, when the hue is removed the two colors are distinguishable color-blind individuals.
 
 ```{r colorcomparison2, out.width= "85%", echo = FALSE, fig.cap = "Color information (i.e., hue) removed from new color-blind accessible graph"}
 knitr::include_graphics("ch_graphing/images/nocolorcomparison2.png")
